--- a/index.html
+++ b/index.html
@@ -7,8 +7,81 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>YouTube Clone</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="left-section">
+        <div class="header-icon-container">
+          <img
+            class="icon hamburger-menu"
+            src="/icons/hamburger-menu.svg"
+            alt=""
+          />
+        </div>
+
+        <img class="youtube-logo" src="/icons/youtube-logo.svg" alt="" />
+      </div>
+
+      <div class="middle-section">
+        <input class="search-bar" type="search" placeholder="Search" />
+        <button class="search-button">
+          <img class="icon" src="/icons/search.svg" alt="" />
+        </button>
+        <button class="voice-search-button">
+          <img
+            class="icon voice-search-icon"
+            src="/icons/voice-search-icon.svg"
+            alt=""
+          />
+        </button>
+      </div>
+
+      <div class="right-section">
+        <div class="header-icon-container">
+          <img class="icon" src="/icons/upload.svg" alt="" />
+        </div>
+
+        <div class="header-icon-container">
+          <img
+            class="icon notifications-icon"
+            src="/icons/notifications.svg"
+            alt=""
+          />
+          <div class="notifications-count">2</div>
+        </div>
+
+        <div class="current-user">
+          <img
+            class="current-user-picture"
+            src="/channel-pictures/profile-picture.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+    </header>
+
+    <nav class="sidebar">
+      <div class="sidebar-link">
+        <img class="icon" src="/icons/home.svg" alt="" />
+        <div>Home</div>
+      </div>
+
+      <div class="sidebar-link">
+        <img class="icon" src="/icons/shorts.svg" alt="" />
+        <div>Shorts</div>
+      </div>
+
+      <div class="sidebar-link">
+        <img class="icon" src="/icons/subscriptions.svg" alt="" />
+        <div>Subscriptions</div>
+      </div>
+
+      <div class="sidebar-link">
+        <img class="icon" src="/icons/you.svg" alt="" />
+        <div>You</div>
+      </div>
+    </nav>
+  </body>
 </html>
