--- a/index.html
+++ b/index.html
@@ -83,5 +83,340 @@
         <div>You</div>
       </div>
     </nav>
+
+    <main class="main-content">
+      <section class="scroll-container">
+        <ul class="scroll-items">
+          <li class="active">All</li>
+          <li>Mixes</li>
+          <li>Music</li>
+          <li>News</li>
+          <li>Tourist destinations</li>
+          <li>Albums</li>
+          <li>Musical ensembles</li>
+          <li>HTML</li>
+          <li>Web Development</li>
+          <li>Conteporary R&B</li>
+          <li>Recently uploaded</li>
+          <li>Watched</li>
+          <li>New to you</li>
+        </ul>
+
+        <div class="scroll-button-container">
+          <button class="scroll-button">
+            <img src="/icons/scroll.png" alt="" />
+          </button>
+        </div>
+      </section>
+
+      <section class="video-grid">
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-1.jpg" alt="" />
+            <div class="video-time">1:36:29</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-1.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <div class="video-title">
+                DAILY VLOG 7AM - 9PM | PRODUCTIVE DAY + TARGET RUNS + TIME WITH
+                GOD + SPEED CLEAN + COOKING #MOMVLOG
+              </div>
+
+              <div class="channel-name-container">
+                <div class="channel-name">McKenna Walker</div>
+              </div>
+
+              <div class="video-stats">71k views • 9 days ago</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-2.jpg" alt="" />
+            <div class="video-time">16:17</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-2.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <div class="video-title">
+                uni diaries | studying at a treehouse cafe + morning yoga +
+                gloomy morning journaling and writing
+              </div>
+
+              <div class="channel-name-container">
+                <p class="channel-name">babiki</p>
+              </div>
+
+              <p class="video-stats">35k views • 1 month ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-3.jpg" alt="" />
+            <div class="video-time">53:34</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-3.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                Navigating Opening up to friends | Dating with kids | Seated
+                with Lebo and Thato Rampedi
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Thato Rampedi</p>
+              </div>
+
+              <p class="video-stats">36k views • 3 weeks ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-4.jpg" alt="" />
+            <div class="video-time">33:44</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-4.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                my hair has grown! fear of friendship, dinner in pta, hauls &
+                all in between | with love, cee 💌
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">coffeenomilk</p>
+              </div>
+
+              <p class="video-stats">44k views • 2 months ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-5.jpg" alt="" />
+            <div class="video-time">40:29</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-5.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                #weeklyvlog | Spent my Birthday Emakhaya 🎂🐄| Umemulo ka Amanda
+                📿
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Tshia Smith</p>
+              </div>
+
+              <p class="video-stats">64K views • 1 year ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-6.jpg" alt="" />
+            <div class="video-time">19:10</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-6.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                10 Years Ago Show chat replay FKJ | Ylang Ylang EP (Live
+                Session)
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Fkj</p>
+              </div>
+
+              <p class="video-stats">36M views • 3 years ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-7.jpg" alt="" />
+            <div class="video-time">10:13</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-7.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                A week in my life| Braces update, teaching & food festivals!
+                #roadto30k #southafricanyoutuber
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Sbahle Mkhize</p>
+              </div>
+
+              <p class="video-stats">61K views • 3 days ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-8.jpg" alt="" />
+            <div class="video-time">1:07:14</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-8.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                a week in the life: Festivals + Events + Friendship Dates +
+                Learners Test + Maintenance & More…
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Chumiie M</p>
+              </div>
+
+              <p class="video-stats">102K views • 8 months ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-9.jpg" alt="" />
+            <div class="video-time">4:58</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-9.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">Nasty C - Phases ft. Rowlene</p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Nasty_C</p>
+              </div>
+
+              <p class="video-stats">3.5M views • 7 years ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-10.jpg" alt="" />
+            <div class="video-time">37:43</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-10.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                Fall Vlog | NEW Hair Color, Date Night With My Friend From High
+                School, Grocery Shopping and MORE
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">De'arra Taylor</p>
+              </div>
+
+              <p class="video-stats">373K views • 6 months ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-11.jpg" alt="" />
+            <div class="video-time">4:05</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-11.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                6LACK - Pretty Little Fears (ft. J. Cole) [Official Music Video]
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">6lack</p>
+              </div>
+
+              <p class="video-stats">162M views • 5 years ago</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-container">
+            <img class="thumbnail" src="/thumbnails/thumbnail-12.jpg" alt="" />
+            <div class="video-time">11:38</div>
+          </div>
+
+          <div class="video-info-container">
+            <div class="channel-profile-picture">
+              <img src="/channel-pictures/channel-12.jpg" alt="" />
+            </div>
+
+            <div class="video-info">
+              <p class="video-title">
+                WE SPENT ALMOST 24 HOURS ON CAMPUS ☕︎ | University of Pretoria
+              </p>
+
+              <div class="channel-name-container">
+                <p class="channel-name">Thato Kalagobe</p>
+              </div>
+
+              <p class="video-stats">4.8K views • 2 dayss ago</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
