--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="icons/favicon.svg" />
     <link rel="stylesheet" href="/styles/style.css" />
     <title>YouTube Clone</title>
   </head>
