Make website SEO friendly

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           <img
             class="icon hamburger-menu"
             src="/icons/hamburger-menu.svg"
-            alt=""
+            alt="Hamburger menu"
           />
         </div>
 
         <img
           class="youtube-logo"
           src="/icons/youtube-logo.svg"
-          alt=""
+          alt="YouTube logo"
           title="YouTube Home"
         />
       </div>
@@ -33,14 +33,14 @@
       <div class="middle-section">
         <input class="search-bar" type="search" placeholder="Search" />
         <button class="search-button">
-          <img class="icon" src="/icons/search.svg" alt="" />
+          <img class="icon" src="/icons/search.svg" alt="Search videos" />
           <div class="header-icon-tooltip tooltip">Search</div>
         </button>
         <button class="voice-search-button">
           <img
             class="icon voice-search-icon"
             src="/icons/voice-search-icon.svg"
-            alt=""
+            alt="Search using your voice"
           />
           <div class="header-icon-tooltip tooltip">Search with your voice</div>
         </button>
@@ -48,7 +48,7 @@
 
       <div class="right-section">
         <div class="header-icon-container">
-          <img class="icon" src="/icons/upload.svg" alt="" />
+          <img class="icon" src="./icons/upload.svg" alt="Upload a video" />
           <div class="header-icon-tooltip tooltip">Create</div>
         </div>
 
@@ -56,7 +56,7 @@
           <img
             class="icon notifications-icon"
             src="/icons/notifications.svg"
-            alt=""
+            alt="Notifications"
           />
           <div class="notifications-count">2</div>
           <div class="header-icon-tooltip tooltip">Notifications</div>
@@ -66,7 +66,7 @@
           <img
             class="current-user-picture"
             src="/channel-pictures/profile-picture.jpg"
-            alt=""
+            alt="Salome Mosikare's profile picture"
           />
         </div>
       </div>
@@ -74,22 +74,26 @@
 
     <nav class="sidebar">
       <div class="sidebar-link" title="Home">
-        <img class="icon" src="/icons/home.svg" alt="" />
+        <img class="icon" src="/icons/home.svg" alt="Home" />
         <div>Home</div>
       </div>
 
       <div class="sidebar-link" title="Shorts">
-        <img class="icon" src="/icons/shorts.svg" alt="" />
+        <img class="icon" src="/icons/shorts.svg" alt="See short videos" />
         <div>Shorts</div>
       </div>
 
       <div class="sidebar-link" title="Subscriptions">
-        <img class="icon" src="/icons/subscriptions.svg" alt="" />
+        <img
+          class="icon"
+          src="/icons/subscriptions.svg"
+          alt="Channels you have subscribed to"
+        />
         <div>Subscriptions</div>
       </div>
 
       <div class="sidebar-link" title="You">
-        <img class="icon" src="/icons/you.svg" alt="" />
+        <img class="icon" src="/icons/you.svg" alt="Your channel" />
         <div>You</div>
       </div>
     </nav>
@@ -114,7 +118,7 @@
 
         <div class="scroll-button-container">
           <button class="scroll-button">
-            <img src="/icons/scroll.png" alt="" />
+            <img src="/icons/scroll.png" alt="Scroll to the right" />
           </button>
           <div class="scroll-button-tooltip tooltip">Next</div>
         </div>
@@ -123,13 +127,20 @@
       <section class="video-grid">
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-1.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-1.jpg"
+              alt="McKenna Walker's video thumbnail"
+            />
             <div class="video-time">1:36:29</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-1.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-1.jpg"
+                alt="McKenna Walker's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -156,13 +167,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-2.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-2.jpg"
+              alt="babiki's video thumbnail"
+            />
             <div class="video-time">16:17</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-2.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-2.jpg"
+                alt="babiki's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -187,13 +205,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-3.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-3.jpg"
+              alt="Thato Rampedi's video thumbnail"
+            />
             <div class="video-time">53:34</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-3.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-3.jpg"
+                alt="Thato Rampedi's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -218,13 +243,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-4.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-4.jpg"
+              alt="coffeenomilk's video thumbnail"
+            />
             <div class="video-time">33:44</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-4.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-4.jpg"
+                alt="coffeenomilk's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -249,13 +281,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-5.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-5.jpg"
+              alt="Tshia Smith's video thumbnail"
+            />
             <div class="video-time">40:29</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-5.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-5.jpg"
+                alt="Tshia Smith's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -280,13 +319,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-6.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-6.jpg"
+              alt="Fkj's video thumbnail"
+            />
             <div class="video-time">19:10</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-6.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-6.jpg"
+                alt="Fkj's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -311,13 +357,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-7.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-7.jpg"
+              alt="Sbahle Mkhize's video thumbnail"
+            />
             <div class="video-time">10:13</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-7.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-7.jpg"
+                alt="Sbahle Mkhize's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -342,13 +395,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-8.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-8.jpg"
+              alt="Chumiie M's video thumbnail"
+            />
             <div class="video-time">1:07:14</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-8.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-8.jpg"
+                alt="Chumiie M's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -373,13 +433,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-9.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-9.jpg"
+              alt="Nasty_C's video thumbnail"
+            />
             <div class="video-time">4:58</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-9.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-9.jpg"
+                alt="Nasty_C's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -399,13 +466,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-10.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-10.jpg"
+              alt="De'arra Taylor's video thumbnail"
+            />
             <div class="video-time">37:43</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-10.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-10.jpg"
+                alt="De'arra Taylor's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -432,13 +506,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-11.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-11.jpg"
+              alt="6lack's video thumbnail"
+            />
             <div class="video-time">4:05</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-11.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-11.jpg"
+                alt="6lack's profile picture"
+              />
             </div>
 
             <div class="video-info">
@@ -461,13 +542,20 @@
 
         <div class="video-preview">
           <div class="thumbnail-container">
-            <img class="thumbnail" src="/thumbnails/thumbnail-12.jpg" alt="" />
+            <img
+              class="thumbnail"
+              src="/thumbnails/thumbnail-12.jpg"
+              alt="Thato Kalagobe's video thumbnail"
+            />
             <div class="video-time">11:38</div>
           </div>
 
           <div class="video-info-container">
             <div class="channel-profile-picture">
-              <img src="/channel-pictures/channel-12.jpg" alt="" />
+              <img
+                src="/channel-pictures/channel-12.jpg"
+                alt="Thato Kalagobe's profile picture"
+              />
             </div>
 
             <div class="video-info">
