Improve website mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Search, watch and enjoy your favourite music and videos, upload and share content with the youTube community, world wide."
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -33,7 +37,11 @@
       <div class="middle-section">
         <input class="search-bar" type="search" placeholder="Search" />
         <button class="search-button">
-          <img class="icon" src="/icons/search.svg" alt="Search videos" />
+          <img
+            class="icon"
+            src="/icons/search.svg"
+            alt="Search the videos and music you love"
+          />
           <div class="header-icon-tooltip tooltip">Search</div>
         </button>
         <button class="voice-search-button">
@@ -48,7 +56,11 @@
 
       <div class="right-section">
         <div class="header-icon-container">
-          <img class="icon" src="./icons/upload.svg" alt="Upload a video" />
+          <img
+            class="icon"
+            src="./icons/upload.svg"
+            alt="Upload your content"
+          />
           <div class="header-icon-tooltip tooltip">Create</div>
         </div>
 
@@ -69,6 +81,15 @@
             alt="Salome Mosikare's profile picture"
           />
         </div>
+
+        <!-- <div class="mobile-search-icon header-icon-container">
+          <img
+            class="icon"
+            src="icons/search.svg"
+            alt="Search the videos and music you love"
+          />
+          <div class="header-icon-tooltip tooltip">Search</div>
+        </div> -->
       </div>
     </header>
 
@@ -79,7 +100,7 @@
       </div>
 
       <div class="sidebar-link" title="Shorts">
-        <img class="icon" src="/icons/shorts.svg" alt="See short videos" />
+        <img class="icon" src="/icons/shorts.svg" alt="Watch short videos" />
         <div>Shorts</div>
       </div>
 
